--- a/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
@@ -76,7 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <com.discover.mobile.bank.account.AccountToggleView
+        <com.discover.mobile.common.ui.widgets.AccountToggleView
             android:id="@+id/acct_toggle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
