--- a/Discover-Commons/res/values/styles.xml
+++ b/Discover-Commons/res/values/styles.xml
@@ -320,9 +320,10 @@
     <style name="orange_help_button">
         <item name="android:layout_marginLeft">@dimen/groups_of_elements_padding</item>
         <item name="android:layout_marginRight">@dimen/help_icon_right_padding</item>
-        <item name="android:layout_marginTop">@dimen/between_related_elements_padding</item>
-        <item name="android:background">@drawable/question_mark_icon</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:background">@drawable/transparent_square</item>
+        <item name="android:src">@drawable/question_mark_icon</item>
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">40dp</item>
     </style>
 </resources>
