ID: DE3113 - UAT8 - Select a Payee - Several cosmetic issues ID: DE3126 - UAT9 - Review Payments - need more space ID: DE3313 - UAT12 - Drawer doesn't close by tapping Review Payments, also doubles payments - Smoke Test ID: DE2934 - View Payees: Features - inline error makes continue button jump when X is tapped ID: DE2808 - Search Results Cleared if Rotate and Hit Back in Add Payee - Payee Details ID: DE3380 - Add Payee - Select a Payee - Title top margin is not correct ID: DE3378 - Alignment of title incorrect in Manage Payees - Select Payee Screen when no payees ID: DE3379 - Manage Payees - Select Payee- Payee Table Top Margin to Large when No payees
Highlight:
Updated navigation for pay bills sections to prevent the user from navigating to the same work-flow if it is already open.

Verified:
- Verified that "Select a Payee" is the title as per comps for the Select Payee when scheduling a payment
- Verified that "Add a Payee" is the button text as per comps for the Select Payee when scheduling a payment and no payees
- Verified that "Add another Payee" is the button text as per comps for the Select Payee when scheduling a payment and has payees
- Verified that No page tile when Select Payee pages for Manage Payees and there are payees in list
- Verified that Welcome title  with wrapped texted when Select Payee pages for Manage Payees and there are no payees in list
- Verified that spacing is accurate between the no scheduled payments text and header
- Verified fix for drawer prevents doubling transaction in review payments
- Verified Continue button remains fixed in Enter Payee Page with and without errors
- Verified search criteria is displayed  correctly after navigating from Payee Details and screen was rotated portrait - landscape - portrait
- Verified that "Add a Payee" is the button text as per comps for the Select Payee when scheduling a payment and no payees
- Verified Add Payee - Select a Payee - Title top margin is correct
- Verified Alignment of title 

--- a/Discover-Bank-Phone/res/values/strings_bank_payment.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payment.xml
@@ -4,7 +4,6 @@
     <!-- Section titles -->
     <string name="pay_a_bill_title">Pay Bills</string>
     <string name="welcome_to_pay_bills">Welcome to Pay Bills</string>
-   	<string name="manage_payees_welcome">Welcome to Manage Payees</string>
 	<string name="manage_payees">Manage Payees</string>
        
     <!-- Payee Not Eligible Strings -->
@@ -18,11 +17,12 @@
  	<string name="pay_bills_delivery_text">Your payments are guaranteed to reach your payee by the \"Deliver By\" date.</string>   
 
 	<!-- Select a payee strings -->
-	<string name="select_payee_title">Select Payee</string>
+	<string name="select_payee_title">Select a Payee</string>
 	<string name="select_payee_empty">You have no payees set up. You must set up payees in order to pay bills.</string>
 	<string name="select_payee_add">Add Payee</string>
 	<string name="select_payee_add_new">Add New Payee</string>
-	<string name="select_payee_no_payees">Add Payee</string>
+	<string name="select_payee_no_payees">Add a Payee</string>
+	<string name="select_payee_another_payee">Add Another Payee</string>
 	
 	<!-- Review payments -->
 	<string name="review_payments_title">Review Payments</string>
@@ -39,7 +39,7 @@
 	
 	<!-- Manage Payees Strings  -->
 	<string name="payee">Payee</string>
-	<string name="manage_payees_welcome">Welcome to Manage Payees</string>
+	<string name="manage_payees_welcome">Welcome to\nManage Payees</string>
 	
 	<!-- Schedule Payments -->
 	<string name="payee">Payee</string>
