--- a/Discover-Bank-Phone/res/layout/bank_select_search_payee.xml
+++ b/Discover-Bank-Phone/res/layout/bank_select_search_payee.xml
@@ -17,7 +17,8 @@
             style="@style/page_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentLeft="true"         
+            android:layout_marginTop="@dimen/groups_of_elements_padding"
             android:layout_marginBottom="@dimen/table_inner_padding"
             android:text="@string/select_payee_title" />
 
