--- a/Discover-Bank-Phone/res/layout/login_start.xml
+++ b/Discover-Bank-Phone/res/layout/login_start.xml
@@ -108,8 +108,8 @@
                     android:paddingLeft="@dimen/element_side_padding"
                     android:paddingRight="@dimen/element_side_padding"
                     android:text="@string/password"
-                    android:textStyle="bold"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textStyle="bold" />
 
                 <com.discover.mobile.common.ui.widgets.NonEmptyEditText
                     android:id="@+id/password_field"
@@ -173,40 +173,70 @@
                     android:layout_marginBottom="20dp"
                     android:layout_marginTop="@dimen/orange_button_margin_top"
                     android:text="@string/login_button_text" />
+                
+                <!-- Link section - CARD -->
+
+                <LinearLayout
+                    android:id="@+id/card_forgot_and_privacy_section"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/login_button"
+                    android:orientation="horizontal"
+                    android:paddingBottom="@dimen/bottom_pad"
+                    android:paddingLeft="@dimen/element_side_padding"
+                    android:paddingRight="@dimen/element_side_padding"
+                    android:weightSum="1" >
+
+                    <TextView
+                        android:id="@+id/forgot_uid_or_pass_text"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        android:clickable="true"
+                        android:gravity="center"
+                        android:text="@string/forgot_id_or_pass_text"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textColor="@color/blue"
+                        android:textSize="@dimen/small_copy_mid"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/privacy_and_security_button_card"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        android:clickable="true"
+                        android:gravity="center"
+                        android:text="@string/privacy_and_terms"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textColor="@color/blue"
+                        android:textSize="@dimen/small_copy_mid" />
+                </LinearLayout>
+
+                <!-- Link section - BANK -->
 
                 <TextView
-                    android:id="@+id/forgot_uid_or_pass_text"
+                    android:id="@+id/privacy_and_security_button_bank"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="@dimen/element_side_padding"
-                    android:layout_below="@+id/login_button"
-					android:layout_alignParentLeft="true"
+                    android:layout_below="@id/login_button"
+                    android:layout_centerHorizontal="true"
                     android:clickable="true"
-                    android:paddingBottom="@dimen/top_pad"
-                    android:text="@string/forgot_id_or_pass_text"
+                    android:paddingBottom="@dimen/bottom_pad"
+                    android:text="@string/privacy_and_terms"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/blue"
                     android:textSize="@dimen/small_copy_mid"
-                    android:textStyle="bold" />
+                    android:visibility="invisible" />
 
-                <TextView
-                    android:id="@+id/privacy_and_security_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingRight="@dimen/element_side_padding"
-                    android:layout_below="@id/login_button"
-                    android:clickable="true"
-                    android:paddingBottom="@dimen/top_pad"
-                    android:text="@string/privacy_and_terms"
-                    android:textColor="@color/blue"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textSize="@dimen/small_copy_mid" />
+                <!-- Toggle Account Section -->
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/privacy_and_security_button"
-                    android:layout_alignParentBottom="true" >
+                    android:paddingTop="@dimen/between_related_elements_padding"
+                    android:layout_alignParentBottom="true"
+                    android:layout_below="@id/privacy_and_security_button_bank" >
 
                     <!-- Divider -->
 
@@ -214,7 +244,7 @@
                         android:id="@+id/login_horizontal_divider"
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:layout_below="@+id/privacy_and_security_button"
+                        android:layout_below="@+id/privacy_and_security_button_card"
                         android:layout_centerHorizontal="true"
                         android:background="@drawable/login_horizontal_divider" />
 
@@ -248,8 +278,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerInParent="true"
-                                android:paddingTop="@dimen/toggle_padding"
                                 android:paddingBottom="@dimen/toggle_padding"
+                                android:paddingTop="@dimen/toggle_padding"
                                 android:singleLine="true"
                                 android:text="@string/card"
                                 android:textColor="@color/title"
@@ -279,26 +309,26 @@
                             android:onClick="toggleBankCardLogin"
                             android:padding="16dp" >
 
-                         <TextView
-                            android:id="@+id/go_to_bank_label"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:paddingTop="@dimen/toggle_padding"
+                            <TextView
+                                android:id="@+id/go_to_bank_label"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerInParent="true"
                                 android:paddingBottom="@dimen/toggle_padding"
-                            android:singleLine="true"
-                            android:text="@string/bank"
-                            android:textColor="@color/title"
-                            android:textSize="@dimen/small_copy_mid" />
+                                android:paddingTop="@dimen/toggle_padding"
+                                android:singleLine="true"
+                                android:text="@string/bank"
+                                android:textColor="@color/title"
+                                android:textSize="@dimen/small_copy_mid" />
 
-                        <ImageView
-                            android:id="@+id/bank_check_mark"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginRight="3dp"
-                            android:layout_toLeftOf="@id/go_to_bank_label"
-                            android:src="@drawable/black_check_mark" />
+                            <ImageView
+                                android:id="@+id/bank_check_mark"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginRight="3dp"
+                                android:layout_toLeftOf="@id/go_to_bank_label"
+                                android:src="@drawable/black_check_mark" />
                         </RelativeLayout>
                     </LinearLayout>
                 </RelativeLayout>
