--- a/Discover-Bank-Phone/res/layout/account_item_detail_view.xml
+++ b/Discover-Bank-Phone/res/layout/account_item_detail_view.xml
@@ -26,7 +26,7 @@
                 android:layout_marginLeft="@dimen/forms_inner_padding"
                 android:layout_marginRight="@dimen/groups_of_elements_padding"
                 android:layout_toLeftOf="@+id/previous_button"
-                android:text="@string/edit" />
+                android:text="@string/empty" />
 
             <ImageView
                 android:id="@+id/previous_button"
