--- a/Discover-Commons/res/layout/action_bar_menu_layout.xml
+++ b/Discover-Commons/res/layout/action_bar_menu_layout.xml
@@ -26,7 +26,7 @@
         style="@style/action_bar_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/logout_button"
         android:layout_toRightOf="@+id/navigation_button" />
 
