--- a/Discover-Commons/res/values/dimens.xml
+++ b/Discover-Commons/res/values/dimens.xml
@@ -44,6 +44,7 @@
     <dimen name="table_inner_padding">15dp</dimen>
     <dimen name="white_button_left_right_padding">15dp</dimen>
     <dimen name="white_button_margin_top">15dp</dimen>
+     <dimen name="nav_footer_font_size">12sp</dimen>
 
     <!-- Navigation Menu -->
     <dimen name="nav_menu_shadow_width">15dp</dimen>
@@ -59,6 +60,7 @@
     <dimen name="nav_section_size">16dp</dimen>
     <dimen name="nav_image_padding">10dp</dimen>
     <dimen name="nav_footer_height">1dp</dimen>
+   
 
     <!-- Logout Button -->
     <dimen name="logout_padding">6dp</dimen>
