--- a/Discover-Bank-Phone/res/values/dimens.xml
+++ b/Discover-Bank-Phone/res/values/dimens.xml
@@ -33,5 +33,7 @@
     <dimen name="atm_modal_icon_width">25dp</dimen>
     <dimen name="atm_modal_icon_height">30dp</dimen>
     <dimen name="atm_modal_icon_padding">3dp</dimen>
+    <dimen name="atm_modal_pin_height">35dp</dimen>
+    <dimen name="atm_modal_pin_width">20dp</dimen>
     
 </resources>
