--- a/Discover-Bank-Phone/res/values/dimens.xml
+++ b/Discover-Bank-Phone/res/values/dimens.xml
@@ -36,4 +36,7 @@
     <dimen name="atm_modal_pin_height">35dp</dimen>
     <dimen name="atm_modal_pin_width">20dp</dimen>
     
+    <!-- Deposit Error Message Dimens -->
+    <dimen name="deposit_error_message_padding">52dp</dimen>
+    
 </resources>
