--- a/Discover-Commons/res/layout/help_widget.xml
+++ b/Discover-Commons/res/layout/help_widget.xml
@@ -35,7 +35,9 @@
             android:layout_below="@+id/triangle"
             android:layout_marginRight="@dimen/between_related_elements_padding"
             android:divider="@drawable/help_table_divider"
-            android:dividerHeight="2dp"/>
+            android:dividerHeight="2dp"
+            android:footerDividersEnabled="false"
+           />
     </RelativeLayout>
 
 </RelativeLayout>
