--- a/Discover-Bank-Phone/res/layout/bank_atm_search_nearby.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_search_nearby.xml
@@ -4,7 +4,23 @@
     android:layout_height="match_parent"
     android:background="@drawable/light_gray_bkgrd" >
 
-    <fragment
+    <FrameLayout
+        android:id="@+id/discover_map"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/drop_shadow"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true" />
+
+    <FrameLayout
+        android:id="@+id/discover_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/drop_shadow"
+        android:layout_below="@+id/full_search_bar"/>
+
+    <!--
+         <fragment
         android:id="@+id/discover_map_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,6 +36,7 @@
         android:layout_above="@+id/drop_shadow"
         android:layout_below="@+id/full_search_bar"
         class="com.discover.mobile.bank.atm.AtmListFragment" />
+    -->
 
     <com.discover.mobile.bank.atm.AtmLocatorMapSearchBar
         android:id="@+id/full_search_bar"
