--- a/Discover-Bank-Phone/res/layout/faq_list_item.xml
+++ b/Discover-Bank-Phone/res/layout/faq_list_item.xml
@@ -14,16 +14,16 @@
     <TextView
         android:id="@+id/expand_indicator"
         android:layout_below="@+id/divider"
-        android:layout_width="wrap_content"
+        android:gravity="center_horizontal|center_vertical"
+        android:layout_width="@dimen/groups_of_elements_padding"
         android:layout_height="wrap_content"
         style="@style/blue_hyperlink"
         android:text="@string/plus" />
 
     <TextView
         android:id="@+id/faq_section_title"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/between_related_elements_padding"
         android:layout_toRightOf="@+id/expand_indicator"
         android:layout_alignTop="@+id/expand_indicator"
         style="@style/body_copy"
