DE3516: Fixed the squishing of the eyeball when the name is long.  Added the hours and services functionality, meaning that if no services/hours are available the layout is hidden.

--- a/Discover-Bank-Phone/res/layout/bank_atm_detail_item.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_detail_item.xml
@@ -100,7 +100,7 @@
             android:id="@+id/services"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/hours"
+            android:layout_marginLeft="@dimen/forms_inner_padding"
             android:layout_below="@+id/hours"
             android:layout_marginTop="@dimen/groups_of_elements_padding"
             android:orientation="vertical" >
