--- a/Discover-Bank-Phone/res/values/strings_faq_pay_bills.xml
+++ b/Discover-Bank-Phone/res/values/strings_faq_pay_bills.xml
@@ -78,7 +78,7 @@
 			Canceled – Bill payment has been canceled. Deleting a scheduled bill payment will result in a canceled status.
 		</string>
 		
-		<string name="delete_payment_title">Why can\’t I edit or delete a bill payment?</string>
+		<string name="delete_payment_title">Why can’t I edit or delete a bill payment?</string>
 		<string name="delete_payment_body">
 		    If the bill payment has already been processed and sent to the payee, you cannot edit or delete it. 
 		    Additionally, bill payments that have been scheduled by a Joint Account holder can only be 
