--- a/Discover-Card-Phone/res/values/error_code_mapping.xml
+++ b/Discover-Card-Phone/res/values/error_code_mapping.xml
@@ -5,26 +5,27 @@
     <string name="E_503">We\'re sorry. Our services are unavailable at this time. We apologize for any inconvenience.</string>
     <string name="E_4011103">You have one more log in attempt today. For security purposes, we limit the number of attempts to enter your information. If you think you are receiving this message in error, call 1-877-742-7822</string>
     <string name="E_4011107">Your temporary password has been used or is expired.</string>
-    <string name="E_4031101">Your Have Exceeded the Maximum Number of Unsuccessful Attempts.	Please contact Customer Service at 1-877-742-7822 for assistance.</string>
+    <string name="E_4031101">We know you’re excited to get into the app, but you’ve tried to log in with the wrong username or password too many times. Please contact Customer Service at 1-877-742-7822 for assistance</string>
     <string name="E_4031104">Your online access is still being set up. Please try back again	later.</string>
     <string name="E_4031105">We\'re sorry, you may no longer use this Discover card account number to access Discover.com Mobile. Instead, please visit www.discover.com to create a User ID and password. If you have any questions, please contact Customer Service at 1-877-742-7822.</string>
-    <string name="E_4031105_WITHUSERID">We\'re Sorry, you may no longer use this Discover Card account number	to access Discover.com Mobile. Instead, please log in using	your User ID and Password. !~~! If you have any questions,Please	contact Customer Service at	1-877-742-7822.</string>
+    <string name="E_4031105_WITHUSERID">We\'re Sorry, you may no longer use this Discover Card account number	to access the app. Instead, please log in using	your User ID and Password. !~~! "&lt;br&#47;&gt;""&lt;br&#47;&gt;"If you have any questions,Please contact Customer Service at	1-877-742-7822</string>
     <string name="E_4031106">Your Discover Card Account Number has been changed. In order to	access your account through the mobile channel, you must first log in to the Account Center on www.discover.com. For more information,please contact Customer Service at 1-877-742-7822</string>
-    <string name="E_4031401_NOTENROLLED">Help us keep your account safe by visiting Discover.com on your	primary PC to establish your set of security questions.</string>
+    <string name="E_4031401_NOTENROLLED">Help us keep your account safe by visiting Discover.com on your primary computer to establish your set of security questions.</string>
     <string name="E_4031402">For security purposes, your online account has been locked.Please call Discover Customer Service at	1-888-251-8003 for information about accessing your account online.</string>
+    <string name="E_4031402_LOCKOUT">For security purposes, your online account has been locked."&lt;br&#47;&gt;""&lt;br&#47;&gt;Please call Discover Customer Service at	1-888-251-8003 for information about accessing your account online.</string>
     <string name="E_4031401_DENY">LOST CARD.</string>
     <string name="E_4031401_UNLOCKED">Help us keep your account safe by visiting Discover.com on your primary PC to establish your set of security questions.</string>
     <string name="E_4031401_UNVERIFIED">Help us keep your account safe by visiting Discover.com on your primary PC to establish your set of security questions.</string>
     <string name="E_4031401_LOCKOUT">For security purposes, your online account has been locked.Please call Discover Customer Service at 1-888-251-8003 for information about accessing your account online.</string>
     <string name="E_0">We\'re sorry.Some of our web site features are unavailable at this time. We sincerely apologize for this temporary inconvenience and are working to resolve the issue.</string>
-    <string name="E_4031102">Due to special conditions related to your account, we could not	complete your request. Please contact Customer Service at 1-877-742-7822.</string>
+    <string name="E_4031102">Due to special conditions related to your account, we could not	complete your request. Please contact Customer Service at 1-800-347-2683.</string>
     <string name="E_4031102_SSO_DELINK">Due to special conditions related to your credit card account, we cannot provide you with access to your account information at this time.To recover your User ID, you will need to re-register for online account access at DiscoverBank.com.</string>
     <string name="E_4031102_SSO_DELINK_BUTTON">true.</string>
     <string name="E_4031102_SSO">Due to special conditions related to your credit card account, we can\'t provide you with access to your account information at this time.Because of increased security measures, you will need to log into Discover Bank in order to access your online account.</string>
     <string name="E_4031102_SSO_BUTTON">true.</string>
     <string name="E_1601">Promotion code is required.</string>
     <string name="E_1602">Please enter a valid promotion code.</string>
-    <string name="E_1603">This Promotion is already enrolled.</string>
+    <string name="E_1603">This Promotion is already enrolled.</string> 
     <string name="E_1604">Failed to enroll the promotion.</string>
     <string name="E_1625">We are sorry. You are ineligible to access this rewards service.</string>
     <string name="E_500">Discover.com Mobile Error We\'re sorry. Your request cannot be completed at this time. We sincerely apologize for this inconvenience and are working to resolve this issue soon. For further assistance please call 1-877-742-7822.</string>
@@ -210,17 +211,17 @@
     <string name="E_2008">Please enter a valid latitude.</string>
     <string name="E_2009">Please enter a valid longitude."</string>
    <!--  <string name="E_5031108">Secure Credit Card Log In.</string>--> 
-    <string name="E_4031401_LOCKOUT">Enhanced Account Security.</string>
-    <string name="E_4031402">Enhanced Account Security.</string>
-    <string name="E_4031401_NOTENROLLED">Enhanced Account Security.</string>
-    <string name="E_4031401_UNVERIFIED">Enhanced Account Security.</string>
-    <string name="E_4031401_UNLOCKED">Enhanced Account Security.</string>
+    <string name="E_4031401_LOCKOUT">Enhanced Account Security</string>
+    <string name="E_4031402">Enhanced Account Security</string>
+    <!--  <string name="E_4031401_NOTENROLLED">Enhanced Account Security</string>-->
+   <!--  <string name="E_4031401_UNVERIFIED">Enhanced Account Security</string> -->
+     <!--<string name="E_4031401_UNLOCKED">Enhanced Account Security</string>-->
  
 
     <!-- NEW CODES Titles-->
 	
 	<string name="E_T_5031108">Performing System Maintenance</string>
-	<string name="E_T_1401_LOCKOUT">Secure Credit Card Login.</string>
+	<string name="E_T_1401_LOCKOUT">Secure Credit Card Login</string>
     <string name="E_T_4031102_SSO_DELINK">We\'re Sorry.</string>
 	<string name="E_T_4031102_SSO">We\'re Sorry.</string>
 	<string name="E_T_4031401_DENY">We\'re Sorry.</string>
@@ -250,19 +251,20 @@
     <string name="E_T_4031105_WITHUSERID">Card Number Error</string>
     <string name="E_T_4031102"> We\'re Sorry</string>
     <string name="E_T_4031105">Card Number Error</string>
-    <string name="E_T_4031402">Enhanced Account Security.</string>
-    <string name="E_T_4031401_UNLOCKED">Enhanced Account Security.</string>
-    <string name="E_T_4031401_NOTENROLLED">Enhanced Account Security.</string>
-    <string name="E_T_4031401_UNVERIFIED">Enhanced Account Security.</string>
-    <string name="E_T_4031401_LOCKOUT">Enhanced Account Security.</string>
-    <string name="E_T_1402_LOCKOUT">Enhanced Account Security.</string>
+    <string name="E_T_4031402">Enhanced Account Security</string>
+    <string name="E_T_4031402_LOCKOUT">Enhanced Account Security</string>
+    <string name="E_T_4031401_UNLOCKED">Enhanced Account Security</string>
+    <string name="E_T_4031401_NOTENROLLED">Enhanced Account Security</string>
+    <string name="E_T_4031401_UNVERIFIED">Enhanced Account Security</string>
+    <string name="E_T_4031401_LOCKOUT">Enhanced Account Security</string>
+    <string name="E_T_1402_LOCKOUT">Enhanced Account Security</string>
     <string name="E_T_5031006">Performing System Maintenance</string>
     <string name="E_T_5031007">Performing System Maintenance</string>
     
     
     
     <!-- New Codes Message -->
-    <string name="E_1401">Help us keep your account safe by visiting Discover.com on your primary PC to establish your set of security questions.</string>
+    <string name="E_1401">Help us keep your account safe by visiting Discover.com on your primary computer to establish your set of security questions.</string>
     <string name="E_1402">We know you’re excited to get into the app, but you’ve tried to log in with the wrong username or password too many times. Please contact us at 1-877-742-7822 or use our enhanced account security to regain access to your account.</string>
     <string name="E_1910">We know you’re excited to get into the app, but you’ve tried to log in with the wrong username or password too many times. Please contact us at 1-877-742-7822 or use our enhanced account security to regain access to your account.</string>
     <string name="E_1905">As a Sam\'s Club Discover Cardmember, you cannot register for Account Center access at discover.com. We\'d love to have you, but for now you must register through the Sam\'s Club Website to manage your account.</string>
