--- a/Discover-Bank-Phone/res/layout-land/bank_atm_search_nearby.xml
+++ b/Discover-Bank-Phone/res/layout-land/bank_atm_search_nearby.xml
@@ -17,6 +17,7 @@
         android:id="@+id/discover_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_below="@+id/full_search_bar"/>
 
     <com.discover.mobile.bank.atm.AtmLocatorMapSearchBar
