DE3390 - Changed Frequently Asked Questions to FAQs per Chads direction.

--- a/Discover-Bank-Phone/res/values/strings_faq.xml
+++ b/Discover-Bank-Phone/res/values/strings_faq.xml
@@ -10,7 +10,7 @@
     </string-array>
     
 <!-- FAQ Section Titles -->
-    <string name="faq_title">Frequently Asked Questions</string>
+    <string name="faq_title">FAQs</string>
     <string name="general">General</string>
 	<string name="atm_locator_single_line">ATM Locator</string>
 	<string name="online_bill_pay">Online Bill Pay</string>
