--- a/Discover-Bank-Phone/res/layout/review_payments_header.xml
+++ b/Discover-Bank-Phone/res/layout/review_payments_header.xml
@@ -82,6 +82,6 @@
     <com.discover.mobile.common.help.HelpWidget
         android:id="@+id/help"
         android:layout_width="match_parent"
-        android:layout_height="120dp"/>
+        android:layout_height="@dimen/help_bar_height_two_items"/>
 
 </RelativeLayout>
