--- a/Discover-Bank-Phone/res/layout/select_payee.xml
+++ b/Discover-Bank-Phone/res/layout/select_payee.xml
@@ -72,7 +72,7 @@
          <com.discover.mobile.common.help.HelpWidget
             android:id="@+id/help"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="@dimen/help_bar_height_two_items" />
 
     </RelativeLayout>
 
