ID: DE3566 - Account Nicknames not Organized Alphabetically (Android) (QC# 91194) ID: DE3604 - Deposit Check - Duplicate Check does not go to different screen, getting an inline notifying of duplicate ID: DE3602 - Deposit Check - no inline for bad quality image ID: DE3622 - Account Activity - Title does not wrap correctly ID: DE3396 - Pay Bills - Review Payments - Delete Payment - CRASH - Smoke Test
Tested:
- Verified text wraps correctly in title of Account Activity Page
- Verified Check Deposit inline errors are displayed correctly in Capture Review Step Page
- Verified Application navigates to Check Deposit Duplicate Page when a check has already been deposited (using new error code as collected via Charles)
- Verified Account nicknames are sorted alphabetically ignoring case.
- Verified with several services that the application does not crash when receiving a response and the UI is not ready

--- a/Discover-Bank-Phone/res/layout/bank_account_activity_header.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_activity_header.xml
@@ -12,9 +12,9 @@
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="@dimen/table_inner_padding"
         android:layout_marginLeft="@dimen/forms_inner_padding"
-        android:layout_marginRight="@dimen/forms_inner_padding"
+        android:layout_marginRight="@dimen/help_widget_width"
+        android:paddingRight="@dimen/help_widget_width"
         android:layout_marginTop="@dimen/groups_of_elements_padding"
-        android:layout_toLeftOf="@+id/help"
         android:gravity="left"
         android:text="@string/activity_title" />
 
