--- a/Discover-Bank-Phone/res/layout/bank_atm_detail_item.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_detail_item.xml
@@ -159,7 +159,8 @@
             android:layout_above="@+id/report"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/forms_inner_padding"
-            android:text="@string/atm_location_email" />
+            android:text="@string/atm_location_email"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/report"
