US7300 - TA14829 : TA14830 : TA14831 - Check deposit no device camera modal. Added a camera verification step to the check deposit feature. If a user attempts to use the check deposit feature without a rear facing camera, they will be shown a modal dialog that tells them that they cannot use check deposit with their current device.

--- a/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
@@ -62,4 +62,10 @@
 	<string name="sending_deposit_detail_text">Your deposit is being sent securely to the bank. Please wait for the transaction to be completed.</string>
 	
 	<string name="shutter_sound_file">file:///system/media/audio/ui/camera_click.ogg</string>
+	
+	<string name="no_device_camera_title">No Device Camera</string>
+	<string name="no_device_camera_body">
+	    We\'re sorry. 
+	    In order to use Mobile Check Deposit please use a device with a camera.
+	</string>
 </resources>
